# vigil

./: Cargo.toml  PLAN.md  README.md  TEST.md  claude.md  instructions.md
.cargo/: config.toml
.claude/: session-state.md  settings.local.json
.claude/commands/: pr.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  usage.md
docs/features/: 001-core-infrastructure.md  002-ping-monitor.md  003-outage-detection.md  004-hop-analysis.md  005-cli-reporting.md  006-polish-service.md  007-alerts-notifications.md  008-latency-quality-metrics.md  009-http-endpoint-monitoring.md  010-enhanced-culprit-tracking.md  011-dev-environment-upgrade-strategy.md  012-ci-pipeline-fix.md
scripts/: qa.sh
src/: config.rs  db.rs  lib.rs  main.rs  models.rs
src/cli/: helpers.rs  mod.rs  outage_detail.rs  outages.rs  service.rs  start.rs  stats.rs  status.rs
src/monitor/: mod.rs  ping.rs  state.rs  traceroute.rs
