[package]
name = "networkmonitor"
version = "0.1.0"
edition = "2021"
description = "Network connectivity monitor for diagnosing intermittent outages"
authors = ["Andreas"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
directories = "5"
dirs = "5"
tabled = "0.15"
indicatif = "0.17"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "networkmonitor"
path = "src/main.rs"
