[package]
name = "vigil"
version = "0.1.0"
edition = "2021"
description = "Keep watch over your network - monitor connectivity and diagnose intermittent outages"
authors = ["Zoo Sky"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
directories = "5"
dirs = "5"
tabled = "0.15"
indicatif = "0.17"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "vigil"
path = "src/main.rs"
